@@ -26,6 +26,7 @@ Version 1.6
   * VGL (PR#12)
   * SourcePawn (PR#39)
   * Ceylon (PR#86)
+  * Smali (Dalvik assembly)
 
 - Fix Template Haskell highlighting (PR#63)
 
